--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,15 +1,43 @@
-<nav th:fragment="navigation" class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-success">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/"><img th:src="@{/icon.png}" width="30"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+<!--        <a class="navbar-brand" href="/"><img th:src="@{/icon.png}" width="30"></a>-->
+        <a class="navbar-brand" href="/">Home</a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
 
-            </div>
+        <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+            <ul class="navbar-nav">
+<!--                <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">-->
+<!--                    <a class="nav-link active text-white" aria-current="page" href="/actors">Actors</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">-->
+<!--                    <a class="nav-link text-white" href="/countries">Countries</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link text-white" href="/movies">Movies</a>-->
+<!--                </li>-->
+            </ul>
+
+            <ul class="navbar-nav">
+
+                <li class="nav-item" th:if="${#authorization.expression('isAuthenticated()')}">
+                    <a class="nav-link text-white" th:inline="text"> Hello <span th:remove="tag" sec:authentication="name">!</span></a>
+                </li>
+
+                <li class="nav-item" th:if="${#authorization.expression('isAuthenticated()')}">
+                    <form th:action="@{/logout}" method="post">
+                        <button type="submit" class="nav-link text-white">Logout</button>
+                    </form>
+                </li>
+
+                <li th:unless="${#authorization.expression('isAuthenticated()')}">
+                    <a href="/login" class="nav-link text-white"> Login</a>
+                </li>
+            </ul>
         </div>
+
     </div>
 </nav>
