--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,22 +8,23 @@
 
 <body class="d-flex flex-column min-vh-100">
 
-<div class="col-6 container flex-grow-1">
+<div class="col-6 container flex-grow-1 mt-5 mb-5">
 
-    <div th:if="${param.error}">
-        Invalid username and password.
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <h2 class="mb-4 text-center">Login Selection</h2>
+            <form action="/user/login" method="get">
+                <div class="text-center">
+                    <button type="submit" class="btn btn-primary btn-lg mb-3">Login as User</button>
+                </div>
+            </form>
+            <form action="/employee/login" method="get">
+                <div class="text-center">
+                    <button type="submit" class="btn btn-secondary btn-lg">Login as Employee</button>
+                </div>
+            </form>
+        </div>
     </div>
-    <div th:if="${param.logout}">
-        You have been logged out.
-    </div>
-    <form th:action="@{/login}" method="post">
-
-        <div><label> Username or Email : <input type="text" name="emailOrUsername"/> </label></div>
-        <div><label> Password: <input type="password" name="password"/> </label></div>
-        <div><input type="submit" value="Sign In"/></div>
-
-    </form>
-
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
