--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-success">
+<nav class="navbar navbar-expand-lg bg-success" xmlns:th="http://www.w3.org/1999/xhtml">
     <div class="container-fluid">
 <!--        <a class="navbar-brand" href="/"><img th:src="@{/icon.png}" width="30"></a>-->
         <a class="navbar-brand" href="/">Home</a>
@@ -35,6 +35,9 @@
 
                 <li th:unless="${#authorization.expression('isAuthenticated()')}">
                     <a href="/login" class="nav-link text-white"> Login</a>
+                </li>
+                <li th:unless="${#authorization.expression('isAuthenticated()')}">
+                    <a href="/register" class="nav-link text-white"> Registration</a>
                 </li>
             </ul>
         </div>
