--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -12,37 +12,40 @@
 
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <h2 class="mb-4 text-center">Registration form</h2>
-            <form action="#" th:action="@{/register}" th:object="${user}" method="post">
+            <h2 class="mb-4 text-center">Registration form (User)</h2>
+            <form action="#" th:action="@{/register}" th:object="${userRequestDto}" method="post">
                 <div class="form-group">
                     <label for="firstName">First name:</label>
                     <input type="text" th:field="*{firstName}" class="form-control" id="firstName" placeholder="Enter First name">
-                    <span th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></span>
+                    <span class="text-danger" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></span>
                 </div>
                 <div class="form-group">
                     <label for="lastName">Last name:</label>
                     <input type="text" th:field="*{lastName}" class="form-control" id="lastName" placeholder="Enter Last name">
-                    <span th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></span>
+                    <span class="text-danger" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></span>
                 </div>
                 <div class="form-group">
                     <label for="username">Username:</label>
                     <input type="text" th:field="*{username}" class="form-control" id="username" placeholder="Enter Username">
-                    <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></span>
+                    <span class="text-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></span>
+                    <p class="text-danger" th:text="${user_error != null} ? ${user_error}"></p>
                 </div>
                 <div class="form-group">
                     <label for="email">E-mail:</label>
                     <input type="text" th:field="*{email}" class="form-control" id="email" placeholder="Enter E-mail">
-                    <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
+                    <span class="text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
+                    <p class="text-danger" th:text="${email_error != null} ? ${email_error}"></p>
                 </div>
                 <div class="form-group">
                     <label for="password">Password:</label>
                     <input type="password" th:field="*{password}" class="form-control" id="password" placeholder="Enter password">
-                    <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
+                    <span class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
                 </div>
                 <div class="form-group">
                     <label for="repeatedPassword">Repeat password:</label>
                     <input type="password" th:field="*{repeatedPassword}" class="form-control" id="repeatedPassword" placeholder="Repeat password">
-                    <span th:if="${#fields.hasErrors('repeatedPassword')}" th:errors="*{repeatedPassword}"></span>
+                    <span class="text-danger" th:if="${#fields.hasErrors('repeatedPassword')}" th:errors="*{repeatedPassword}"></span>
+                    <p class="text-danger" th:text="${password_error != null} ? ${password_error}"></p>
                 </div>
                 <div class="text-center">
                     <button type="submit" class="btn btn-secondary btn-lg">Register</button>
