--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -12,43 +12,15 @@
 
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <h2 class="mb-4 text-center">Registration form (User)</h2>
-            <form action="#" th:action="@{/register}" th:object="${userRequestDto}" method="post">
-                <div class="form-group">
-                    <label for="firstName">First name:</label>
-                    <input type="text" th:field="*{firstName}" class="form-control" id="firstName" placeholder="Enter First name">
-                    <span class="text-danger" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></span>
-                </div>
-                <div class="form-group">
-                    <label for="lastName">Last name:</label>
-                    <input type="text" th:field="*{lastName}" class="form-control" id="lastName" placeholder="Enter Last name">
-                    <span class="text-danger" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></span>
-                </div>
-                <div class="form-group">
-                    <label for="username">Username:</label>
-                    <input type="text" th:field="*{username}" class="form-control" id="username" placeholder="Enter Username">
-                    <span class="text-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></span>
-                    <p class="text-danger" th:text="${user_error != null} ? ${user_error}"></p>
-                </div>
-                <div class="form-group">
-                    <label for="email">E-mail:</label>
-                    <input type="text" th:field="*{email}" class="form-control" id="email" placeholder="Enter E-mail">
-                    <span class="text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
-                    <p class="text-danger" th:text="${email_error != null} ? ${email_error}"></p>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password:</label>
-                    <input type="password" th:field="*{password}" class="form-control" id="password" placeholder="Enter password">
-                    <span class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
-                </div>
-                <div class="form-group">
-                    <label for="repeatedPassword">Repeat password:</label>
-                    <input type="password" th:field="*{repeatedPassword}" class="form-control" id="repeatedPassword" placeholder="Repeat password">
-                    <span class="text-danger" th:if="${#fields.hasErrors('repeatedPassword')}" th:errors="*{repeatedPassword}"></span>
-                    <p class="text-danger" th:text="${password_error != null} ? ${password_error}"></p>
-                </div>
+            <h2 class="mb-4 text-center">Login Selection</h2>
+            <form action="/user/register" method="get">
                 <div class="text-center">
-                    <button type="submit" class="btn btn-secondary btn-lg">Register</button>
+                    <button type="submit" class="btn btn-primary btn-lg mb-3">Register as User</button>
+                </div>
+            </form>
+            <form action="/employee/register" method="get">
+                <div class="text-center">
+                    <button type="submit" class="btn btn-secondary btn-lg">Register as Employee</button>
                 </div>
             </form>
         </div>
