--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -12,7 +12,7 @@
 
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <h2 class="mb-4 text-center">Login Selection</h2>
+            <h2 class="mb-4 text-center">Registration Selection</h2>
             <form action="/user/register" method="get">
                 <div class="text-center">
                     <button type="submit" class="btn btn-primary btn-lg mb-3">Register as User</button>
@@ -27,11 +27,14 @@
     </div>
 </div>
 
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+
 </body>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <div th:replace="~{fragments/footer.html}"></div>
 </html>
