--- a/src/main/resources/templates/register_user.html
+++ b/src/main/resources/templates/register_user.html
@@ -60,6 +60,7 @@
         crossorigin="anonymous"></script>
 </body>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <div th:replace="~{fragments/footer.html}"></div>
 </html>
