--- a/src/main/resources/templates/product_add.html
+++ b/src/main/resources/templates/product_add.html
@@ -12,9 +12,9 @@
 
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <h2 class="mb-4 text-center">Add new <span th:text="${product_type}"></span></h2>
+            <h2 class="mb-4 text-center">Add new <span th:text="${param.productType}"></span></h2>
             <form action="#" name="productType" th:action="@{/products/add}" th:object="${product}" method="post">
-                <input type="hidden" th:value="${product_type}">
+                <input type="hidden" name="productType" th:value="${param.productType}">
                 <div class="form-group">
                     <label for="name">Name:</label>
                     <input type="text" th:field="*{name}" class="form-control" id="name" placeholder="Enter product name">
