--- a/src/main/resources/templates/product_view.html
+++ b/src/main/resources/templates/product_view.html
@@ -70,8 +70,7 @@
                         <div class="form-group">
                             <label for="quantity">Quantity:</label>
                             <!-- TODO: max not working -->
-                            <input type="number" class="form-control" id="quantity" name="quantity" min="1"
-                                   max=${product.quantity}" value="1">
+                            <input type="number" class="form-control" id="quantity" name="quantity" min="1" max="${product.quantity}" value="1">
                         </div>
                     </div>
                     <div class="col-sm-4">
