--- a/src/main/resources/templates/product_view.html
+++ b/src/main/resources/templates/product_view.html
@@ -69,8 +69,7 @@
                     <div class="col-sm-8">
                         <div class="form-group">
                             <label for="quantity">Quantity:</label>
-                            <!-- TODO: max not working -->
-                            <input type="number" class="form-control" id="quantity" name="quantity" min="1" max="${product.quantity}" value="1">
+                            <input type="number" class="form-control" id="quantity" name="quantity" min="1" th:attr="max=${product.quantity}" value="1">
                         </div>
                     </div>
                     <div class="col-sm-4">
